Google Sign In added. Register Acitivity Added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="title_activity_record_screen">RecordScreen</string>
+    <string name="client_id">1066150231979-1it1b2scs24ldu9q844uocl9j4p3tp2f.apps.googleusercontent.com</string>
+    <string name="title_activity_register_user">RegisterUserActivity</string>
 </resources>
