--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="client_id">1066150231979-1it1b2scs24ldu9q844uocl9j4p3tp2f.apps.googleusercontent.com</string>
     <string name="title_activity_register_user">RegisterUserActivity</string>
     <string name="title_activity_doctor_prescription">DoctorPrescriptionActivity</string>
+    <string name="title_activity_patient_home">PatientHomeActivity</string>
 </resources>
